# GodValley

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Makefile  README.md  README_FA.md  WIKI.md  WIKI_FA.md  docker-compose-complete.yml  package-lock.json  package.json
.github/workflows/: ci.yml
docker/backend-actix/: Dockerfile
docker/frontend-nextjs/: Dockerfile
docker/redis/: redis.conf
docker/scylladb/: scylla.yaml
docs/: DEPLOYMENT_GUIDE.md  IMPROVED_STRUCTURE.md  ISSUES_AND_FIXES.md  QUICK_START.md
k8s/automation/n8n/: n8n.yaml
k8s/base/: backend.yaml  configmap.yaml  frontend.yaml  redis.yaml  scylladb.yaml  secrets.yaml
k8s/ingress/: ingress-nginx-install.yaml  ingress-routes.yaml  traefik-install.yaml
k8s/monitoring/: grafana.yaml  prometheus.yaml  redis-exporter.yaml  scylla-exporter.yaml
k8s/namespaces/: cardiani.yaml  gcorp.yaml  godvalley.yaml  journa.yaml  zeteb.yaml
k8s/observability/elasticsearch/: elasticsearch.yaml  kibana.yaml
k8s/observability/fluent-bit/: fluent-bit.yaml
k8s/observability/grafana/: grafana.yaml
k8s/observability/loki/: loki.yaml
k8s/observability/prometheus/: prometheus.yaml
k8s/sites/cardiani/: backend-patch.yaml  frontend-patch.yaml  ingress.yaml  kustomization.yaml  redis-patch.yaml  scylladb-patch.yaml
k8s/sites/gcorp/: backend-patch.yaml  frontend-patch.yaml  ingress.yaml  kustomization.yaml  scylladb-patch.yaml
k8s/sites/godvalley/: backend-patch.yaml  frontend-patch.yaml  ingress.yaml  kustomization.yaml
k8s/sites/journa/: backend-patch.yaml  frontend-patch.yaml  ingress.yaml  kustomization.yaml
k8s/sites/zeteb/: backend-patch.yaml  frontend-patch.yaml  ingress.yaml  kustomization.yaml
libs/common-db/: Cargo.toml
libs/common-db/src/: lib.rs
libs/common-proto/: Cargo.toml  build.rs
libs/common-proto/src/: lib.rs
libs/common-utils/: Cargo.toml
libs/common-utils/src/: lib.rs
local/: bootstrap.ps1  docker-compose.dev.yml  hosts.example  loki-config.yaml  prometheus.yml  promtail-config.yaml
protos/: core.proto
scripts/: auto-fix.sh
services/cardiani/web/: package.json
services/gcorp.cc/web/: Dockerfile  package-lock.json  package.json
services/godvalley/apps/core/: Cargo.toml  Dockerfile
services/godvalley/apps/core/src/: main.rs  state.rs
services/godvalley/apps/core/src/grpc/: mod.rs
services/godvalley/apps/core/src/handlers/: data.rs  health.rs  mod.rs
services/godvalley/web/: Dockerfile  package.json
services/journa/apps/api/: Cargo.toml  Dockerfile
services/journa/apps/api/src/: main.rs
services/journa/apps/api/src/routes/: health.rs
services/journa/backend/: Dockerfile
services/journa/web/: package.json
services/zeteb/web/: package.json
tools/redis-commander/: deployment.yaml
tools/scylla-manager/: deployment.yaml
(+19 files in other folders)
