[package]
name = "common-db"
version = "0.1.0"
edition = "2021"

[dependencies]
scylla = "1.5.0"
redis = { version = "1.0.3", features = ["tokio-comp", "json"] }
tokio = { version = "1.49.0", features = ["full"] }
common-utils = { path = "../common-utils" }
async-trait = "0.1.86"
tracing = "0.1.44"
