[package]
name = "common-utils"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = "0.1.44"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
