[package]
name = "godvalley-core"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.1"
actix-web-prometheus = "0.1.2"
tonic = "0.14.3"
tonic-prost = "0.14.3"
tokio = { version = "1.49.0", features = ["full"] }
scylla = "1.5.0"
common-proto = { path = "../../../../libs/common-proto" }
common-utils = { path = "../../../../libs/common-utils" }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
prometheus = "0.14.0"
tracing = "0.1.44"
tracing-subscriber = "0.3"
futures = "0.3"
