[package]
name = "journa-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
actix-cors = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
common-utils = { path = "../../../../libs/common-utils" }
common-db = { path = "../../../../libs/common-db" }
prometheus = "0.13"
actix-web-prometheus = "0.1"
