[package]
name = "journa-api"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.7.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
common-utils = { path = "../../../../libs/common-utils" }
common-db = { path = "../../../../libs/common-db" }
prometheus = "0.14.0"
actix-web-prometheus = "0.1.2"
